--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_auth: ^4.3.0
   mailer: ^6.0.0
   country_picker: ^2.0.20
+  image_picker: ^0.8.7+1
+  firebase_storage: ^11.1.0
   
   
 
