--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_storage: ^11.1.0
   salomon_bottom_bar: ^3.3.2
   concentric_transition: ^1.0.3
+  animations: ^2.0.3
   
   
 
