--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   salomon_bottom_bar: ^3.3.2
   concentric_transition: ^1.0.3
   animations: ^2.0.3
+  dependencies:
+  share: ^2.0.4
+  share_plus: ^6.3.4
   
   
 
