--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   tab_container: ^2.0.0
   intl_phone_number_input: ^0.7.1
   material_design_icons_flutter: ^2.3.50
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
