--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   provider: ^6.0.0
   uuid: ^3.0.1
   permission_handler: ^9.2.0
-  flutter_sound_lite: ^8.5.0
+  #flutter_sound_lite: ^8.5.0
+  flutter_sound: ^9.2.13
   flutter_countdown_timer: ^4.1.0
   loading_indicator: ^3.1.0
   http: ^0.13.0
@@ -71,6 +72,7 @@ dependencies:
   aws_iot_api: ^2.0.0
   flutter_local_notifications: ^14.0.1
   flutter_launcher_icons: ^0.13.1
+  
   
   
 
