--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,5 @@
 # Uncomment this line to define a global platform for your project
+# source 'https://github.com/CocoaPods/Specs.git'
 # platform :ios, '11.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
@@ -29,7 +30,6 @@ flutter_ios_podfile_setup
 
 target 'Runner' do
   use_frameworks!
-  use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
@@ -97,4 +97,3 @@ post_install do |installer|
     # End of the permission_handler configuration
   end
 end
-
