--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,8 @@ dependencies:
   charts_flutter: ^0.12.0
   google_fonts: ^4.0.4
   mqtt_client: ^9.8.1
-  
+  firebase_database: ^10.2.3
+
   sigv4: ^5.0.0
   aws_iot_api: ^2.0.0
   flutter_local_notifications: ^14.0.1
